# System-Bank

./: .gitignore  README.md
.github/workflows/: ci.yml  staging.yml
api-rust/: Cargo.toml  Dockerfile
api-rust/src/middleware/: auth.rs
api-rust/src/models/: transaction.rs
api-rust/src/queue/: publisher.rs
api-rust/src/routes/: accounts.rs  health.rs  transactions.rs
api-rust/src/services/: account_service.rs  mod.rs  transaction_service.rs
batch-cobol/: Dockerfile  Makefile  README.md
batch-cobol/copybooks/: ACCOUNT-RECORD.cpy
batch-cobol/src/: CNAB240-GEN.cbl  DAILY-CLOSING.cbl  FEE-CALC.cbl  INTEREST-CALC.cbl  RECONCILIATION.cbl
docs/adr/: 001-rust-over-java.md  002-rabbitmq-over-kafka.md  003-cobol-subprocess.md  README.md
infra/ci/.github/workflows/: production.yml
infra/docker/: .env.example  docker-compose.yml
infra/postgres/: init.sql
migrations/: 001_initial_schema.sql  002_ledger_entries.sql  003_audit_triggers.sql  004_batch_jobs.sql
scripts/: run-job.sh
