[package]
name = "system-bank-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "uuid", "time", "rust_decimal"] }
rust_decimal = "1"
rust_decimal_macros = "1"
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
lapin = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
thiserror = "1"
anyhow = "1"
time = { version = "0.3", features = ["serde"] }
dotenv = "0.15"

[dev-dependencies]
axum-test = "14"
tokio-test = "0.4"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"
